--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "university-finder",
   "private": true,
   "type": "module",
-  "homepage": "https://vovka.github.io/university-finder",
+  "homepage": "https://vovka.github.io/unifinder",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
