--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,35 @@ jobs:
         VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
         VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
         
+    - name: Create index.html
+      run: |
+        echo '<!DOCTYPE html>
+        <html lang="uk">
+          <head>
+            <meta charset="UTF-8" />
+            <link rel="icon" type="image/svg+xml" href="/unifinder/favicon.ico" />
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <title>University Finder</title>
+            <link rel="stylesheet" href="/unifinder/assets/root-Cecmluj2.css" />
+            <script type="text/javascript">
+              (function(l) {
+                if (l.search[1] === "/" ) {
+                  var decoded = l.search.slice(1).split("&").map(function(s) { 
+                    return s.replace(/~and~/g, "&")
+                  }).join("?");
+                  window.history.replaceState(null, null,
+                      l.pathname.slice(0, -1) + decoded + l.hash
+                  );
+                }
+              }(window.location))
+            </script>
+          </head>
+          <body>
+            <div id="root"></div>
+            <script type="module" src="/unifinder/assets/entry.client-27_S-1T_.js"></script>
+          </body>
+        </html>' > build/client/index.html
+        
     - name: Deploy to GitHub Pages
       id: deployment
       uses: peaceiris/actions-gh-pages@v3
