Fix Vercel deployment - MIME types and routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,41 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "build",
-  "framework": "react-router",
+  "outputDirectory": "build/client",
   "installCommand": "npm install",
-  "devCommand": "npm run dev"
+  "framework": "vite",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)\\.js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)\\.css",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css"
+        }
+      ]
+    },
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ]
 } 
